TS add panel scroll

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
     <!--  app -->
     <div class="row">
       <!-- left hand pane -->
-      <div class="col-sm-6">
+      <div class="col-sm-6 pre-scrollable">
         <h2>Teams</h2>
         <div class="panel-group" id="teams">
           <!--  RICE -->
