CK add more teams

--- a/views/index.html
+++ b/views/index.html
@@ -107,9 +107,53 @@
               </div>
             </div>
           </div>
-          <!--  A.N.OTHER TEAM -->
+          <!--  WSP -->
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#teams" href="#wsp">WSP</a>
+                  </h4>
+                </div>
+                <div class="col-sm-6">
+                  <button type="button" class="btn pull-right" onclick="showPlanElement('room-5')">Locate</button>
+                </div>
+              </div>
+            </div>
+            <div id="wsp" class="panel-collapse collapse">
+              <div class="panel-body">
+                <h4>What We Do</h4>
+                <p>Development and changes for WSP system.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Business and Management -->
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#teams" href="#bam">Business and Management</a>
+                  </h4>
+                </div>
+                <div class="col-sm-6">
+                  <button type="button" class="btn pull-right" onclick="showPlanElement('room-6')">Locate</button>
+                </div>
+              </div>
+            </div>
+            <div id="bam" class="panel-collapse collapse">
+              <div class="panel-body">
+                <h4>What We Do</h4>
+                <p>Portfolio management, resourcing and recruiting</p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
+
+
       <!--  right hand pane -->
       <div class="col-sm-6">
         <h2>Plan</h2>
