--- a/style/plan.css
+++ b/style/plan.css
@@ -1,3 +1,5 @@
+/*  There are some MASSIVE hacks in this, but hey*/
+
 .floor {
   border-style: solid;
   border-width: thin;
@@ -15,9 +17,8 @@
 
 .room{
   margin-bottom: 5px;
-  padding-top: 20px;
-  padding-bottom: 20px;
   border-radius: 10px;
+  padding-top: 5%;
   height: 50px;
 }
 
@@ -67,6 +68,7 @@
 
 .room-large{
   height: 100px;
+  padding-top: 18%;
 }
 
 .row-room{
@@ -81,8 +83,13 @@
   width: 49%;
 }
 
+.pull-bottom{
+  margin-top: 60px;
+}
+
 table{
   width: 100%;
+  text-align: center;
 }
 
 td{
