TS make layout two tables

--- a/views/index.html
+++ b/views/index.html
@@ -202,7 +202,9 @@
                   </tr>
                   <tr>
                     <td>
-                      <div class="breakout pull-left"></div>
+                      <div class="w85 pull-left">
+                        <div class="breakout pull-right"></div>
+                      </div>
                     </td>
                   </tr>
                   <tr>
