TS make layout two tables

--- a/views/index.html
+++ b/views/index.html
@@ -95,6 +95,12 @@
                       <td><div class="desk-bottom-left"></div></td>
                     </tr>
                     <tr>
+                      <td><div class="desk-top-left"></div></td>
+                    </tr>
+                    <tr>
+                      <td><div class="desk-bottom-left"></div></td>
+                    </tr>
+                    <tr>
                       <td>
                         <div class="room-large"></div>
                       </td>
