--- a/views/index.html
+++ b/views/index.html
@@ -234,7 +234,7 @@
       </div>
     </div>
     <!--  right hand pane -->
-    <div class="col-sm-7">
+    <div class="col-sm-3">
       <!--  Rooms -->
       <h2>Rooms</h2>
       <div class="panel-group pre-scrollable" id="rooms">
@@ -509,6 +509,8 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="col-sm-4">
       <!--  Teams -->
       <h2>Teams</h2>
       <div class="panel-group pre-scrollable" id="teams">
