TS add extra column

--- a/views/index.html
+++ b/views/index.html
@@ -418,7 +418,7 @@
                   </h4>
                 </div>
                 <div class="col-sm-6">
-                  <button type="button" class="btn pull-right" onclick="showPlanElement('room-6')">Locate</button>
+                  <button type="button" class="btn pull-right" onclick="showPlanElement('room','r2')">Locate</button>
                 </div>
               </div>
             </div>
