--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>9202 Floor Plan</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -528,7 +528,7 @@
                   <tr>
                     <td class="row-room">
                       <span class="room small pull-left colourable" id="bptm">BP9218<br/>Tudhoe Mill</span>
-                      <span class="room small pull-right colourable" id="bp38">BP9238</span>
+                      <span class="room small pull-right colourable" id="bp38"><p class="pad-down">BP9238</p></span>
                     </td>
                   </tr>
                   <tr><td class="row-room"><div class="desk-top colourable csmdesk"></div></td></tr>
